Datos Compuestos: Funciones

--- a/02-Datos_Primitivos/03_template_String.html
+++ b/02-Datos_Primitivos/03_template_String.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="icon" href="js.png">
+		<link rel="icon" href="../js.png">
 		<title>Template String</title>
 	</head>
 	<body>
