--- a/01-Introducción/01_basicos.html
+++ b/01-Introducción/01_basicos.html
@@ -16,9 +16,10 @@
 				Antes de ECMAScript 6 (2015) las variables tenian lo que se conoce como
 				el scope global y scope funcional pero no contaban con el scope
 				de bloque
+				
+				Si declaramos una variable con la palabra reservada var, esta variable sera de ambito global,
+				pero si declaramos una variable con la palabra reservada let, es una variable de ambito de bloque.
 			*/
-
-
 
 			//Variable con scope global
 			var saludo = "Hola Mundo!!!";
